show info on start and fix weird visibility bug

--- a/src/infocard/InfoCard.scss
+++ b/src/infocard/InfoCard.scss
@@ -1,21 +1,29 @@
 .InfoBg.visible{
-    position: fixed;
-    margin: 0;
-    padding: 0;
 
-    width: 100vw;
-    height: 100vh;
+    visibility: visible;
 
-    background: rgba(0, 0, 0, 0.781);
+    @media screen and (max-width: 800px) {
+        position: fixed;
+        margin: 0;
+        padding: 0;
+
+        width: 100vw;
+        height: 100vh;
+
+        background: rgba(0, 0, 0, 0.781);
+    }
+    
 }
 
 .InfoBg.invisible{
-    display: none;
+    visibility: hidden;
 }
 
 .InfoCard {
 
-
+    @media screen and (min-width: 800px) {
+        visibility: visible !important;
+    }
     position: fixed;
     top: 12rem;
     left: 59.7vw;
